working on scss

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
   <body>
     <header class="header" id="home">
       <section class="profile">
-        <img class="profile-image" src="" alt="" />
-        <h1 class="profile-name">Jon Pynes</h1>
+        <div class="container-profile-image">
+        <img class="profile-image" src="./Assests/Profile b&w.jpg" alt="" />
+        </div>
+      <h1 class="profile-name">Jon Pynes</h1>
       </section>
       <nav class="nav">
         <img src="./Assests/Hamburger Menu.svg" alt="">
