--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </section>
       <section class="project">
-        <h2 class="projects-title" id="past-projects">Past Projects</h2>
+        <h2 class="project-title" id="past-projects">Past Projects</h2>
         <div class="container-project-image">
           <img class="project-image" src="" alt="" />
         </div>
