html overflow is fixed, next step position hamburger menu and finish header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Kenzie" />
     <meta name="author" content="Kenzie" />
     <meta name="keywords" content="Kenzie" />
@@ -30,7 +30,7 @@
       <h1 class="profile-name">Jon Pynes</h1>
       </section>
       <nav class="nav">
-        <img src="./Assests/Hamburger Menu.svg" alt="">
+        <img class="hamburger" src="./Assests/Hamburger Menu.svg" alt="">
         <ul class="nav-ul">
           <li class="nav-ul-li">
             <a href="#home" class="nav-ul-li-link">Home</a>
@@ -54,8 +54,6 @@
     </header>
     <section class="video">
       <iframe
-        width="500"
-        height="500"
         src="https://www.youtube.com/watch?v=CH5oEpGj3TU&ab_channel=JonPynes"
       >
       </iframe>
