header is still giving me trouble. Skipped down to frame the rest of styling. God save us all

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </section>
       <nav class="nav">
         <img class="hamburger" src="./Assests/Hamburger Menu.svg" alt="">
-        <ul class="nav-ul">
+        <ul class="nav-ul hidden">
           <li class="nav-ul-li">
             <a href="#home" class="nav-ul-li-link">Home</a>
           </li>
@@ -62,7 +62,7 @@
       <section class="project" id="active-projects">
         <h2 class="project-title">Active Projects</h2>
         <div class="container-project-image">
-          <img class="project-image" src="" alt="" />
+          <img class="project-image" src="./Assests/mixkit-person-wearing-a-vr-mask-in-a-virtual-reality-room-64-original.png" alt="" />
         </div>
       </section>
       <section class="project">
