working on CSS still. Almost have my Vanilla done

--- a/index.html
+++ b/index.html
@@ -74,13 +74,12 @@
       <section class="about" id="about">
         <h2 class="about-me">What I Bring</h2>
         <p class="about-me-paragraph">
-          <p>A joy in solving problems.</p> <p>Work ethic.</p> <p>Vision.</p> <p>UX/UI Design Training.</p>
-          <p>Sales experience.</p> <p>Profit driven.</p> <p>A love for the out-doors.</p> <p>Married &
-            two Babies!</p>
+          <p>Problem Solving</p> <p>Work Ethic</p> <p>Profit Driven</p> <p>Vision</p> <p>UX/UI Training</p>
+          <p>Sales Experience</p> 
         </p>
       </section>
       <section class="contact">
-        <h2 class="contact" id="contact">Contact</h2>
+        <h2 class="contact-title" id="contact">Contact</h2>
         <div class="container-contact-logo">
           <div class="contact-logo-linkedin">
             <img
