--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </li>
           <li class="nav-ul-li">
             <a href="#active-projects" class="nav-ul-li-link"
-              >Active Projects</a
+              >Active Project</a
             >
           </li>
           <li class="nav-ul-li">
