--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
       </nav>
     </header>
     <section class="video">
-      <iframe
-        src="https://www.youtube.com/watch?v=CH5oEpGj3TU&ab_channel=JonPynes"
-      >
-      </iframe>
+      <iframe src="https://www.youtube.com/embed/CH5oEpGj3TU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <main class="main">
       <section class="project" id="active-projects">
