--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <!-- Title Page-->
     <title>Jon Pynes</title>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="./Assests/favicon_io/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./Assests/favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./Assests/favicon_io/favicon-16x16.png">
+<link rel="manifest" href="./Assests/favicon_io/site.webmanifest">
     <!-- CSS-->
     <link href="css/main.css" rel="stylesheet" media="all" />
   </head>
@@ -53,7 +57,7 @@
       </nav>
     </header>
     <section class="video">
-      <iframe src="https://www.youtube.com/embed/CH5oEpGj3TU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/CH5oEpGj3TU" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <main class="main">
       <section class="project" id="active-projects">
