testing linkedin link

--- a/index.html
+++ b/index.html
@@ -83,11 +83,13 @@
         <h2 class="contact-title" id="contact">Contact</h2>
         <div class="container-contact-logo">
           <div class="contact-logo-linkedin">
+            <a href="www.linkedin.com/in/jonpynes">
             <img
               src="./Assests/linkedin 1.svg"
               alt="LinkedIn"
               class="contact-logo-linkedin-image"
             />
+          </a>
           </div>
           <div class="contact-logo-sms">
             <img
