added https:// now it works

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2 class="contact-title" id="contact">Contact</h2>
         <div class="container-contact-logo">
           <div class="contact-logo-linkedin">
-            <a href="www.linkedin.com/in/jonpynes">
+            <a href="https://www.linkedin.com/in/jonpynes" target="_blank">
             <img
               src="./Assests/linkedin 1.svg"
               alt="LinkedIn"
