--- a/index.html
+++ b/index.html
@@ -92,11 +92,13 @@
           </a>
           </div>
           <div class="contact-logo-sms">
+            <a href="sms:4027304258>">
             <img
               src="./Assests/sms 1.svg"
               alt="Text SMS"
               class="contact-logo-sms-image"
             />
+            </a>
           </div>
           <div class="contact-logo-github">
             <img
