--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </a>
           </div>
           <div class="contact-logo-sms">
-            <a href="sms:4027304258>">
+            <a href="sms:4027304258">
             <img
               src="./Assests/sms 1.svg"
               alt="Text SMS"
