--- a/index.html
+++ b/index.html
@@ -101,11 +101,13 @@
             </a>
           </div>
           <div class="contact-logo-github">
+            <a href="https://github.com/JonathanPynes" target="_blank">
             <img
               src="./Assests/github 1.svg"
               alt="GitHub"
               class="contact-logo-github-image"
             />
+          </a>
           </div>
         </div>
       </section>
