added some vanilla js

--- a/index.html
+++ b/index.html
@@ -113,5 +113,6 @@
       </section>
       <footer class="footer"><p class="footer-paragraph">©2021 Jonathan Pynes, Inc. All rights reserved</p></footer>
     </main>
+    <script type="text/javascript" src="javascript/homepage.js"></script>
   </body>
 </html>
