--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <section class="project">
         <h2 class="project-title" id="past-projects">Past Projects</h2>
         <div class="container-project-image">
-          <img class="project-image" src="" alt="" />
+          <img class="project-image" src="./Assests/Past projects.JPG" alt="" />
         </div>
       </section>
       <section class="about" id="about">
