--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </nav>
     </header>
     <section class="video">
-      <iframe class="video-iframe" src="https://www.youtube.com/embed/x4an-O8e_oU" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="video-iframe" src="https://www.youtube.com/embed/x4an-O8e_oU?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <main class="main">
       <section class="project" id="active-projects">
