added some JS added some responsive styling... need to build active projects page and past projects page

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       <section class="about" id="about">
         <h2 class="about-me">What I Bring</h2>
         <p class="about-me-paragraph">
-          <p>Problem Solving</p> <p>Work Ethic</p> <p>Profit Driven</p> <p>Vision</p> <p>UX/UI Training</p>
-          <p>Sales Experience</p> 
+          <p class="about-me-paragraph">Problem Solving</p> <p class="about-me-paragraph">Work Ethic</p> <p class="about-me-paragraph">Profit Driven</p> <p class="about-me-paragraph">Vision</p> <p class="about-me-paragraph">UX/UI Training</p>
+          <p class="about-me-paragraph">Sales Experience</p> 
         </p>
       </section>
       <section class="contact">
